Fix tracklist overflow

--- a/src/index.css
+++ b/src/index.css
@@ -28,15 +28,10 @@ body {
   font-size: 28px;
 }
 .management-bar-wrapper {
-  position: absolute;
+  position: fixed;
   bottom: 0;
   width: 100%;
-}
-table {
-  width: 100%;
-}
-tbody tr td:nth-child(2), tbody tr td:last-child {
-  width: 10%;
+  z-index: 2;
 }
 span.bp3-popover-target, span.bp3-popover-target .bp3-button {
   display: block;
@@ -118,4 +113,13 @@ span.bp3-popover-target, span.bp3-popover-target .bp3-button {
   text-align: center;
   color: #FFF;
   font-size: 28px;
+}
+.track-list {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: calc(100% - 103px);
+  overflow-y: scroll;
+  z-index: 1;
 }
